sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:12: error: ')' expected but 'for' found.
	for (j<- fin to debut by -1){
        ^AlgCocktailSort2:17: error: ')' expected but '}' found.
}
^